--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "rollup-starter-app",
   "devDependencies": {
     "npm-run-all": "^4.1.5",
+    "prettier": "1.18.2",
     "rollup": "^1.16.2",
     "rollup-plugin-commonjs": "^10.0.0",
     "rollup-plugin-node-resolve": "^5.1.0",
