--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "name": "rollup-starter-app",
   "devDependencies": {
+    "eslint": "^6.0.1",
     "npm-run-all": "^4.1.5",
     "prettier": "1.18.2",
     "rollup": "^1.16.2",
