--- a/.eslintrc
+++ b/.eslintrc
@@ -5,7 +5,10 @@
     "es6": true
   },
   "parserOptions": {
-    "sourceType": "module"
+    "sourceType": "module",
+    "ecmaFeatures": {
+      "jsx": true
+    }
   },
   "rules": {
     "spaced-comment": ["error", "always"]
