--- a/package.json
+++ b/package.json
@@ -1,18 +1,22 @@
 {
   "name": "rollup-starter-app",
   "devDependencies": {
+    "@babel/cli": "^7.5.0",
+    "@babel/core": "^7.5.4",
+    "@babel/plugin-syntax-jsx": "^7.2.0",
+    "@babel/plugin-transform-react-jsx": "^7.3.0",
     "eslint": "^6.0.1",
     "npm-run-all": "^4.1.5",
     "prettier": "1.18.2",
     "rollup": "^1.16.2",
+    "rollup-plugin-babel": "^4.3.3",
     "rollup-plugin-commonjs": "^10.0.0",
     "rollup-plugin-node-resolve": "^5.1.0",
     "rollup-plugin-terser": "^5.0.0",
     "serve": "^11.0.2"
   },
   "dependencies": {
-    "date-fns": "^1.30.1",
-    "snabbdom": "^0.7.3"
+    "date-fns": "^1.30.1"
   },
   "scripts": {
     "build": "rollup -c",
