--- a/.eslintrc
+++ b/.eslintrc
@@ -2,6 +2,8 @@
   "extends": "eslint:recommended",
   "env": {
     "browser": true,
+    "node": true,
+    "jest": true,
     "es6": true
   },
   "parserOptions": {
