--- a/package.json
+++ b/package.json
@@ -5,7 +5,9 @@
     "@babel/core": "^7.5.4",
     "@babel/plugin-syntax-jsx": "^7.2.0",
     "@babel/plugin-transform-react-jsx": "^7.3.0",
+    "@babel/preset-env": "^7.5.4",
     "eslint": "^6.0.1",
+    "jest": "^24.8.0",
     "npm-run-all": "^4.1.5",
     "prettier": "1.18.2",
     "rollup": "^1.16.2",
@@ -22,6 +24,7 @@
     "build": "rollup -c",
     "watch": "rollup -c -w",
     "dev": "npm-run-all --parallel start watch",
-    "start": "serve public"
+    "start": "serve public",
+    "test": "jest"
   }
 }
