--- a/package.json
+++ b/package.json
@@ -18,7 +18,10 @@
     "serve": "^11.0.2"
   },
   "dependencies": {
-    "date-fns": "^1.30.1"
+    "date-fns": "^1.30.1",
+    "rollup-plugin-typescript": "^1.0.1",
+    "tslib": "^1.10.0",
+    "typescript": "^3.5.3"
   },
   "scripts": {
     "build": "rollup -c",
