--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "@babel/plugin-syntax-jsx": "^7.2.0",
     "@babel/plugin-transform-react-jsx": "^7.3.0",
     "@babel/preset-env": "^7.5.4",
+    "@babel/preset-typescript": "^7.3.3",
     "eslint": "^6.0.1",
     "jest": "^24.8.0",
     "npm-run-all": "^4.1.5",
@@ -18,6 +19,7 @@
     "serve": "^11.0.2"
   },
   "dependencies": {
+    "@types/jest": "^24.0.15",
     "date-fns": "^1.30.1",
     "rollup-plugin-typescript": "^1.0.1",
     "tslib": "^1.10.0",
